# DuetOS

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .promptignore  AGENTS.md  CLAUDE.md  CLAUDE_PARALLEL.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  DUETOS_PKG_IMPLEMENTATION.md  LICENSE  README.md  launch.vs.json  lifetime-downloads-state.json  lifetime-downloads.json  rust-toolchain.toml  rustfmt.toml
kernel/: CMakeLists.txt
kernel/acpi/: acpi.cpp  acpi.h  acpi_power.cpp  acpi_power.h  acpi_sci.cpp  acpi_sci.h  aml.cpp  aml.h  aml_eval.cpp  aml_eval.h  ec.cpp  ec.h  srat.cpp  srat.h
kernel/apps/: about.cpp  about.h  browser.cpp  browser.h  calculator.cpp  calculator.h  calendar.cpp  calendar.h  charmap.cpp  charmap.h  clock.cpp  clock.h  dbg.cpp  dbg.h  dbg_core.cpp  dbg_core.h  dbg_internal.h  dbg_render.cpp  devicemgr.cpp  devicemgr.h  files.cpp  files.h  firewall.cpp  firewall.h  gfxdemo.cpp  gfxdemo.h  gfxdemo_modes.cpp  gfxdemo_modes.h  gfxdemo_modes_vk.cpp  help.cpp  help.h  hexview.cpp  hexview.h  imageview.cpp  imageview.h  netstatus.cpp  netstatus.h  notes.cpp  notes.h  notes_internal.h  (+20 more)
kernel/core/: auth.cpp  auth.h  boot_bringup.cpp  boot_bringup.h  boot_cmdline.cpp  boot_cmdline.h  boot_tasks.cpp  boot_tasks.h  cleanroom_trace.cpp  cleanroom_trace.h  crprobe.cpp  crprobe.h  diag_decode.cpp  diag_decode.h  dll_loader.cpp  dll_loader.h  dll_loader_selftest.cpp  elf_loader.cpp  elf_loader.h  fault_domain.cpp  fault_domain.h  firmware_loader.cpp  firmware_loader.h  generated_synxtest_elf.h  heartbeat.cpp  heartbeat.h  hexdump.cpp  hexdump.h  init.cpp  init.h  kdbg.cpp  kdbg.h  klog.cpp  klog.h  log_names.cpp  log_names.h  login.cpp  login.h  main.cpp  menu_dispatch.cpp  (+61 more)
kernel/cpu/: cpuhp.cpp  cpuhp.h  critical.cpp  critical.h  ipi_call.cpp  ipi_call.h  percpu.cpp  percpu.h  percpu_counter.cpp  percpu_counter.h  topology.cpp  topology.h
kernel/crypto/: aes.cpp  aes.h  aes_ccm.cpp  aes_ccm.h  aes_gcm.cpp  aes_gcm.h  aes_keywrap.cpp  aes_keywrap.h  asn1.cpp  asn1.h  bigint.cpp  bigint.h  bigint_rsa4096_vector.h  chacha20poly1305.cpp  chacha20poly1305.h  hkdf.cpp  hkdf.h  hmac.cpp  hmac.h  md5.cpp  md5.h  pbkdf2.cpp  pbkdf2.h  prf.cpp  prf.h  rsa.cpp  rsa.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h  x25519.cpp  x25519.h  x509.cpp  x509.h
kernel/debug/: bp_syscall.cpp  bp_syscall.h  breakpoints.cpp  breakpoints.h  disasm.cpp  disasm.h  dr.h  extable.cpp  extable.h  extable_bind.h  hot_patch.cpp  hot_patch.h  inspect.cpp  inspect.h  probes.cpp  probes.h  syscall_scan.cpp  syscall_scan.h  tripwire.cpp  tripwire.h  watch.cpp  watch.h
kernel/diag/: boot_observe.cpp  boot_observe.h  boot_progress.cpp  boot_progress.h  bsod.cpp  bsod.h  cleanroom_trace.cpp  cleanroom_trace.h  crprobe.cpp  debugcon.cpp  debugcon.h  diag_decode.cpp  diag_decode.h  event_trace.cpp  event_trace.h  fault_inject.cpp  fault_inject.h  fault_react.cpp  fault_react.h  fix_journal.cpp  fix_journal.h  fix_journal_persist.cpp  fix_journal_persist.h  gdb_monitor.cpp  gdb_monitor.h  gdb_monitor_read.cpp  gdb_server.cpp  gdb_server.h  gdb_stub.cpp  gdb_stub.h  heartbeat.cpp  hexdump.cpp  hexdump.h  hung_task.cpp  hung_task.h  introspect.cpp  introspect.h  kdbg.cpp  kdbg.h  kpath.cpp  (+39 more)
kernel/env/: autonomic.cpp  autonomic.h  autonomic_feedback.cpp  autonomic_feedback.h  config_proposal.cpp  config_proposal.h  config_proposal_decide.h  environment.cpp  environment.h  neural_policy.cpp  neural_policy.h  neural_policy_selftest.cpp  policy_shield.cpp  policy_shield.h
kernel/fs/: boot_slot.cpp  boot_slot.h  duetfs.cpp  duetfs.h  duetfs_block_dev.cpp  duetfs_image.cpp  duetfs_rust_panic.cpp  exfat.cpp  exfat.h  exfat_selftest.cpp  ext4.cpp  ext4.h  ext4_selftest.cpp  fat32.cpp  fat32.h  fat32_create.cpp  fat32_dir.cpp  fat32_format.cpp  fat32_internal.h  fat32_lookup.cpp  fat32_read.cpp  fat32_selftest.cpp  fat32_write.cpp  fat32_write_internal.h  file_route.cpp  file_route.h  gpt.cpp  gpt.h  installer.cpp  installer.h  mount.cpp  mount.h  ntfs.cpp  ntfs.h  ntfs_selftest.cpp  ramfs.cpp  ramfs.h  tmpfs.cpp  tmpfs.h  vfs.cpp  (+1 more)
kernel/ipc/: handle_table.cpp  handle_table.h  iocp.cpp  iocp.h  kevent.cpp  kevent.h  kfile.cpp  kfile.h  kmailbox.cpp  kmailbox.h  kmutex.cpp  kmutex.h  kobject.cpp  kobject.h  ksemaphore.cpp  ksemaphore.h  kwaitable.cpp  kwaitable.h  named_kobjects.cpp  named_kobjects.h  named_pipes.cpp  named_pipes.h
kernel/loader/: apiset_static.cpp  apiset_static.h  compat_shim.cpp  compat_shim.h  dll_loader.cpp  dll_loader.h  dll_loader_selftest.cpp  elf_loader.cpp  elf_loader.h  firmware_loader.cpp  firmware_loader.h  firmware_package.cpp  firmware_package.h  firmware_package_test_vectors.h  firmware_package_trust.h  image_patch.h  pe_exports.cpp  pe_exports.h  pe_loader.cpp  pe_loader.h
kernel/log/: klog.cpp  klog.h  klog_persist.cpp  klog_persist.h
kernel/mm/: address_space.cpp  address_space.h  dma.cpp  dma.h  frame_allocator.cpp  frame_allocator.h  kernel_half_watch.cpp  kernel_half_watch.h  kheap.cpp  kheap.h  kmalloc_route.h  kstack.cpp  kstack.h  multiboot2.h  page.cpp  page.h  paging.cpp  paging.h  poison.h  poison_alloc.cpp  poison_alloc.h  poison_list.cpp  safe_read.S  slab.cpp  slab.h  user_copy.S  zone.cpp  zone.h
kernel/net/: cookies.cpp  cookies.h  ec.cpp  ec.h  firewall.cpp  firewall.h  http.cpp  http.h  ipv6.cpp  net_smoke.cpp  net_smoke.h  socket.cpp  socket.h  stack.cpp  stack.h  tcp.cpp  tcp.h  tcp_cubic.cpp  tcp_internal.h  tcp_sack.cpp  tcp_sack.h  tcp_segment.cpp  tcp_selftest.cpp  tcp_timer.cpp  tls.cpp  tls.h  tls_socket.cpp  tls_socket.h  wifi.cpp  wifi.h  x509_verify.cpp  x509_verify.h
kernel/power/: reboot.cpp  reboot.h
kernel/proc/: process.cpp  process.h  ring3_smoke.cpp  ring3_smoke.h  spawn.cpp  spawn.h
kernel/rust/: CMakeLists.txt  Cargo.toml
kernel/sched/: context_switch.S  loadavg.cpp  loadavg.h  sched.cpp  sched.h  workpool.cpp  workpool.h
kernel/security/: argon2id.cpp  argon2id.h  attack_sim.cpp  attack_sim.h  auth.cpp  auth.h  auth_pentest.cpp  auth_pentest.h  blake2b.h  (+47 more)
(+2064 files in other folders)
