# DuetOS Rust workspace.
#
# Rust is reserved for standalone kernel subsystems with meaningful parser,
# lifetime, or memory-safety pressure. Each subsystem remains its own crate and
# is linked into the C++ kernel through a narrow, hand-written C FFI.

[workspace]
resolver = "2"
members = [
    "kernel/drivers/usb/class_rust",
    "kernel/drivers/usb/hid_rust",
    "kernel/fs/duetfs",
    "kernel/rust",
]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "z"
codegen-units = 1
strip = true
overflow-checks = true

[profile.dev]
panic = "abort"
opt-level = 1
overflow-checks = true
debug = true
