# DuetOS Rust workspace.
#
# Rust is reserved for standalone kernel subsystems with meaningful parser,
# lifetime, or memory-safety pressure. Each subsystem remains its own crate and
# is linked into the C++ kernel through a narrow, hand-written C FFI.

[workspace]
resolver = "2"
members = [
    "kernel/acpi/acpi_rust",
    "kernel/arch/x86_64/smbios_rust",
    "kernel/drivers/pci/caps_rust",
    "kernel/drivers/usb/class_rust",
    "kernel/drivers/usb/hid_rust",
    "kernel/drivers/usb/msc_scsi_rust",
    "kernel/fs/duetfs",
    "kernel/fs/exfat_rust",
    "kernel/fs/ext4_rust",
    "kernel/fs/ntfs_rust",
    "kernel/loader/exec_meta_rust",
    "kernel/mm/multiboot2_rust",
    "kernel/net/hci_rust",
    "kernel/net/parsers_rust",
    "kernel/net/wifi80211_rust",
    "kernel/rust",
    "kernel/util/img_meta_rust",
]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

# Lint policy applied to every kernel-linked Rust crate. Subsystem
# crates inherit by adding `[lints] workspace = true` to their
# Cargo.toml; the only escape valve is per-symbol `#[allow(...)]`
# with an explanatory comment.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
non_ascii_idents = "deny"

[workspace.lints.clippy]
# Catch-all "you probably didn't mean this" lints. Keep the list
# small — clippy::pedantic / clippy::cargo are off because they
# fire on idiomatic no_std + FFI patterns we accept.
#
# `undocumented_unsafe_blocks` is intentionally NOT in this set yet:
# the v0 duetfs + USB crates pre-date the SAFETY-comment discipline
# and carry ~117 bare `unsafe { … }` blocks. Lift to "warn" / "deny"
# once a dedicated backfill slice adds the comments. New crates
# (parsers_rust, msc_sense_rust) ship with SAFETY comments on every
# unsafe block so they don't add to the gap.
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "z"
codegen-units = 1
strip = true
overflow-checks = true

[profile.dev]
panic = "abort"
opt-level = 1
overflow-checks = true
debug = true
